--- a/etc/vagrant.yaml
+++ b/etc/vagrant.yaml
@@ -1,6 +1,6 @@
 box_name: precise
-allocate_memory: 1024
-num_cpus: 2
+allocate_memory: 2048
+num_cpus: 4
 
 ip_prefix: 192.168.27
 mac_prefix: 080027027
@@ -8,3 +8,5 @@ mac_prefix: 080027027
 # These paths are all relative to the Vagrantfile
 cache_dir: cache/
 ssh_dir: ~/.ssh/
+
+devstack_branch: master
