took out the token mods for testing

--- a/etc/local.conf
+++ b/etc/local.conf
@@ -19,8 +19,8 @@ driver = keystone.trust.backends.sql.Trust
 driver = keystone.catalog.backends.sql.Catalog
 
 [token]
-#driver = keystone.token.backends.sql.Token
-driver = keystone.token.comcast_backends.sql.Token
+driver = keystone.token.backends.sql.Token
+#driver = keystone.token.comcast_backends.sql.Token
 #provider = keystone.token.providers.uuid.Provider
 
 [policy]
